[gd_scene load_steps=11 format=3 uid="uid://nd2xy7bggbpd"]

[ext_resource type="Script" uid="uid://ntbric6j67wk" path="res://scripts/workbench.gd" id="1_1cdeh"]
[ext_resource type="PackedScene" uid="uid://b8ahvbdgptg25" path="res://scenes/UI/Menu/workbenchMenu.tscn" id="2_p3ame"]
[ext_resource type="PackedScene" uid="uid://d1qyoh5usnukp" path="res://scenes/Gun/Grip/ak_Grip.tscn" id="3_7rqw5"]
[ext_resource type="PackedScene" uid="uid://flvrdlal5a7y" path="res://scenes/Gun/Receiver/ak_receiver.tscn" id="4_8j27g"]
[ext_resource type="PackedScene" uid="uid://dxo5ngr6nq0ue" path="res://scenes/Gun/Barrel/ak_Barrel.tscn" id="5_hjm4f"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5602k"]
transparency = 1
albedo_color = Color(0.219608, 0.219608, 0.219608, 0.470588)

[sub_resource type="BoxMesh" id="BoxMesh_7tolv"]
material = SubResource("StandardMaterial3D_5602k")

[sub_resource type="BoxShape3D" id="BoxShape3D_l4ogl"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7rqw5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8j27g"]

[node name="Workbench" type="Node3D"]
script = ExtResource("1_1cdeh")
workbench_ui_scene = ExtResource("2_p3ame")
zoom_target = NodePath("CameraPosition")
gripScene = ExtResource("3_7rqw5")
receiverScene = ExtResource("4_8j27g")
barrelScene = ExtResource("5_hjm4f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_7tolv")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0.565, 0.485267)
shape = SubResource("BoxShape3D_l4ogl")

[node name="CameraPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0236118, 0.61928, 1.1222)

[node name="GripPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.23205, 0.508458, 0.332357)

[node name="ReceiverPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0618517, 0.504814, 0.156831)

[node name="BarrelPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.348457, 0.504068, 0.313661)

[node name="StaticBody3D" type="StaticBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_7rqw5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_8j27g")
